--- a/examenes-analisis.tex
+++ b/examenes-analisis.tex
@@ -219,7 +219,7 @@
 
 \vspace{1.5cm}
 
-\includegraphics[width=0.4\textwidth]{img/logos/infinito.png}
+\includegraphics[width=0.4\textwidth]{img/logos/sticker.png}
 \end{center}
 
 \vfill
@@ -231,7 +231,7 @@ Sánchez
 Alberca}\\ \textsf{asalber@ceu.es} \\ \textsf{https://aprendeconalf.es}}
 \end{tabular}
 \end{flushleft}
-\end{titlepage}\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, frame hidden, boxrule=0pt, interior hidden, breakable, enhanced, sharp corners]}{\end{tcolorbox}}\fi
+\end{titlepage}\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, interior hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, sharp corners, frame hidden, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Tabla de contenidos}
 {
@@ -265,7 +265,7 @@ Calcular los puntos de acumulación del conjunto
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Veamos primero que todos los puntos del intervalo \([0,1]\) son puntos
 de acumulación. Sea \(x\in[0,1]\). Entonces para cualquier
@@ -321,7 +321,7 @@ Dada la sucesión \(\left(\frac{1}{2^n}\right)_{n=1}^\infty\),
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\alph{enumi}.}
@@ -362,7 +362,7 @@ tiempo?
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Veamos que primero que la sucesión es monótona decreciente.
 \(x_1=3>x_n= \sqrt{\frac{3}{2}+3} = 2.12\). Supongamos ahora que
@@ -403,7 +403,7 @@ Demostrar, usando la definición de límite, que
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Para cualquier \(\varepsilon>0\) existe
 \(\delta=\frac{2}{3}\varepsilon\), tal que si
@@ -432,7 +432,7 @@ siguientes funciones son infinitésimos equivalentes en \(x=0\):
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Para que dos funciones \(f\) y \(g\) sean infinitésimos equivalentes en
 \(x=0\) se tiene que cumplir que \(\lim_{x\to 0}\frac{f(x)}{g(x)}=1\).
@@ -460,7 +460,7 @@ Determinar las asíntotas de la función
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 El dominio de la función es
 \(\operatorname{Dom}(f) = \mathbb{R}-[-1,0]\) de modo que solo puede
@@ -560,7 +560,7 @@ sucesión converge y calcular su límite.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 El término recurrente de la sucesión puede escribirse de la siguiente
 manera
@@ -641,7 +641,7 @@ los polígonos regulares en triángulos como en el siguiente ejemplo.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 \begin{enumerate}
 \def\labelenumi{\alph{enumi}.}
@@ -716,7 +716,7 @@ equivalentes en \(x=0\), demostrar que también lo son
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Como \(\operatorname{sen}(x)\) y \(x\) son infinitésimos equivalentes en
 \(x=0\), se tiene que
@@ -744,7 +744,7 @@ Determinar el dominio y el tipo de asíntotas de la función
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Para que exista la raíz, el radicando debe ser positivo, es decir,
 \(\frac{x^3}{4x-1}\geq 0\). Es fácil ver que
@@ -812,7 +812,7 @@ conjunto cerrado o abierto?
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 \(A\) puede expresarse con la unión de intervalos, ya que
 \(x^2-1\geq 0 \Leftrightarrow x^2\geq 1 \Leftrightarrow x\leq -1 \mbox{ o } x\geq 1\),
@@ -850,7 +850,7 @@ Taylor de cuarto grado.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Para realizar la aproximación que se pide calcularemos el polinomio de
 Taylor de cuarto grado de la función \(f(x)=\ln(\sqrt{x})\) en el punto
@@ -898,7 +898,7 @@ y clasificar el resto de discontinuidades.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 Para que la función \(h(x)=\dfrac{x^2-2x+a}{x^3+bx^2-6x}\) tenga una
 discontinuidad evitable en \(x=2\), debe cumplirse que
@@ -966,7 +966,7 @@ envoltorio sea mínimo.
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 El volumen de una esfera de radio \(r\) es \(v_e(r)=\frac{4}{3}\pi r^3\)
 y el de un cilindro de radio \(r\) y altura \(h\) es
@@ -1029,7 +1029,7 @@ más de una raíz en el intervalo \((0,1)\) para cualquier valor de \(k\).
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 \(x^2-2x+\frac{3}{2}>0\) \(\forall x\in\mathbb{R}\), de manera que, para
 que exista la función \(f\), debe ser también \(k>0\) y, por tanto,
@@ -1065,7 +1065,7 @@ la curva implícita \(e^{x^2y}-\ln(\sqrt{x-y})= 0\) en el punto \(x=0\).
 
 \end{exercise}
 
-\begin{tcolorbox}[enhanced jigsaw, left=2mm, colbacktitle=quarto-callout-tip-color!10!white, toptitle=1mm, titlerule=0mm, colframe=quarto-callout-tip-color-frame, colback=white, rightrule=.15mm, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, coltitle=black, toprule=.15mm, breakable, bottomtitle=1mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, opacitybacktitle=0.6, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, colframe=quarto-callout-tip-color-frame, opacitybacktitle=0.6, colbacktitle=quarto-callout-tip-color!10!white, rightrule=.15mm, toptitle=1mm, opacityback=0, title=\textcolor{quarto-callout-tip-color}{\faLightbulb}\hspace{0.5em}{Solución}, arc=.35mm, toprule=.15mm, breakable, bottomtitle=1mm, titlerule=0mm, bottomrule=.15mm, leftrule=.75mm, coltitle=black, left=2mm, colback=white]
 
 En primer lugar obtenemos los valores de \(y\) que cumplen la ecuación
 de la curva implícita para \(x=0\). Sustituyendo en la ecuación se tiene
