--- a/examen-2023-11-14.qmd
+++ b/examen-2023-11-14.qmd
@@ -201,21 +201,19 @@ $$
 La altura del cilindro es la tercera componente de la función vectorial $\frac{r}{\pi}t$, de manera, que para el valor de $t$ anterior se tiene que la mínima altura del cilindro debe ser
 
 $$
-\frac{r}{\pi}\frac{\pi l}{\sqrt{R^2\pi^2+r^2}} = \frac{rl}{\sqrt{R^2\pi^2+r^2}} 
+h=\frac{r}{\pi}\frac{\pi l}{\sqrt{R^2\pi^2+r^2}} = \frac{rl}{\sqrt{R^2\pi^2+r^2}} 
 $$
 
 En el caso de un cilindro de radio $R=10$ cm y un cable de $10$ m y sección circular de radio $2$ cm, sustituyendo en la expresión anterior se tiene
 
 $$
-\frac{2\cdot 1000}{\sqrt{10^2\pi^2+2^2}} \approx 63.5334 \mbox{ cm}.
+h=\frac{2\cdot 1000}{\sqrt{10^2\pi^2+2^2}} \approx 63.5334 \mbox{ cm}.
 $$
 
 Finalmente, el número de vueltas que dará el cable alrededor del cilindro es
 
 $$
-\frac{t}{2\pi} 
-= \frac{l}{2\sqrt{R^2\pi^2+r^2}} 
-= \frac{1000}{2\sqrt{10^2\pi^2+2^2}}
+\frac{h}{2r} = \frac{63.5334}{4}
 \approx 15.8833,
 $$
 
