--- a/examen-2024-11-11.qmd
+++ b/examen-2024-11-11.qmd
@@ -49,7 +49,7 @@ Por tanto, la función tiene una asíntota vertical en $x=1$ por la derecha.
 Estudiamos los límites en el infinito.
 
 \begin{align*}
-\lim_{x\to \infty} e^{\frac{x}{x^2-1}}+3x
+\lim_{x\to -\infty} e^{\frac{x}{x^2-1}}+3x
 &= \lim_{x\to -\infty} e^{\frac{x}{x^2-1}}+\lim_{x\to -\infty} 3x \\
 &= e^{\lim_{x\to -\infty}\frac{x}{x^2-1}}+3\lim_{x\to -\infty} x \\
 &= e^0-3\infty = -\infty. \\
