--- a/examen-2024-12-20.qmd
+++ b/examen-2024-12-20.qmd
@@ -154,7 +154,7 @@ a.  La fórmula del polinomio de Taylor de segundo grado en el punto $(1,0)$ es
 :::
 
 :::{#exr-2}
-Un coche circula por una circuito elíptico cuya trayectoria viene dada por la función vectorial $f(t)=(400\cos(10t), 100\operatorname{sen}(10t))$, donde $t$ está dado en minutos y las coordenadas de $f$ en metros.
+Un coche circula por un circuito elíptico cuya trayectoria viene dada por la función vectorial $f(t)=(400\cos(10t), 100\operatorname{sen}(10t))$, donde $t$ está dado en minutos y las coordenadas de $f$ en metros.
 
 a.  Calcular la rapidez del vehículo en el instante $t=\pi$.
 
@@ -349,8 +349,8 @@ $$
 De la segunda ecuación obtenemos que $l=2\lambda$, sustituyendo en la primera ecuación obtenemos que 
 
 $$
-h + \frac{\pi}{4}2\lambda = \lambda \left( 1 + \frac{\pi}{2}\right)
-$$, 
+h + \frac{\pi}{4}2\lambda = \lambda \left( 1 + \frac{\pi}{2}\right),
+$$
 
 de donde se deduce que que $h = \lambda$, y por tanto la relación entre $l$ y $h$ es $l=2h$. 
 
@@ -493,11 +493,11 @@ Para ello, resolvemos el sistema de ecuaciones
 $$
 \begin{cases}
 y &= \sqrt[3]{x}\\
-x = y-y^3 \\
+x &= y-y^3 \\
 \end{cases}
 $$
 
-Despejando $x$ en la primera ecuación obtenemos que $x=y^3$, y sustituyendo en la segunda ecuación obtenemos que $y^3 = y-y^3$, de donde se deduce que $y(1-2y^2)=0$, y por tanto tenemos tres soluciones $y=0$, $y=1/\sqrt{2}=2^{-1/2}$ y $y=-1/\sqrt{2}=-2^{-1/2}$. Sustituyendo en la primera ecuación obtenemos que $x=0$, $x=2^{-3/2}$ y $x=-2^{-3/2}$. Por lo tanto, los puntos de corte son $(0,0)$, $(2^{-3/2}, 2^{-1/2})$ y $(-2^{-3/2}, -2^{-1/2})$.
+Despejando $x$ en la primera ecuación obtenemos que $x=y^3$, y sustituyendo en la segunda ecuación obtenemos que $y^3 = y-y^3$, de donde se deduce que $y(1-2y^2)=0$, y por tanto tenemos tres soluciones $y=0$, $y=1/\sqrt{2}=2^{-1/2}$ y $y=-1/\sqrt{2}=-2^{-1/2}$. Sustituyendo en la primera ecuación obtenemos que $x=0$, $x=2^{-3/2}$ y $x=-2^{-3/2}$ respectivamente. Por lo tanto, los puntos de corte son $(0,0)$, $(2^{-3/2}, 2^{-1/2})$ y $(-2^{-3/2}, -2^{-1/2})$.
 
 Si integramos primero con respecto a $y$ y luego con respecto a $x$, la región de integración resulta más compleja porque los límites de $x$ no serían los puntos de corte de las dos gráficas, sino los extremos de la función $x=y-y^3$, pero además habría que descomponer la región de integración en cuatro partes. Por lo tanto, es más conveniente integrar primero con respecto a $x$ y luego con respecto a $y$. En este caso, la región de integración puede descomponerse en las dos subregiones siguientes
 
